--- a/NumPy/Numpy_concepts.ipynb
+++ b/NumPy/Numpy_concepts.ipynb
@@ -188,11 +188,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7a525251",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 6]\n",
+      "[5 7 9]\n",
+      "[-3 -3 -3]\n",
+      "[ 4 10 18]\n",
+      "[0.25 0.4  0.5 ]\n",
+      "[1 2 3]\n",
+      "[  1  32 729]\n",
+      "[1.         1.41421356 1.73205081]\n",
+      "[ 2.71828183  7.3890561  20.08553692]\n",
+      "[0.         0.69314718 1.09861229]\n",
+      "[0.         0.30103    0.47712125]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#arithmetic operations\n",
+    "\n",
+    "#scalar operations\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "\n",
+    "print(a*2)\n",
+    "\n",
+    "#basic element-wise operations\n",
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)\n",
+    "print(a/b)\n",
+    "print(a%b)\n",
+    "print(a**b)\n",
+    "\n",
+    "#builtin mathematical fucntion\n",
+    "print(np.sqrt(a))\n",
+    "print(np.exp(a))\n",
+    "print(np.log(a))\n",
+    "print(np.log10(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "864659ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True  True  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#comparison operators\n",
+    "marks = np.array([45, 80, 65, 70, 90])\n",
+    "print(marks > 50)"
+   ]
   }
  ],
  "metadata": {
