--- a/NumPy/Numpy_concepts.ipynb
+++ b/NumPy/Numpy_concepts.ipynb
@@ -253,6 +253,65 @@
     "marks = np.array([45, 80, 65, 70, 90])\n",
     "print(marks > 50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15852a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 9]\n",
+      "[ 4 10 18]\n",
+      "[[3 4 5]\n",
+      " [3 4 5]\n",
+      " [3 4 5]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (3,1) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     15\u001b[39m r = np.array([[\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m],[\u001b[32m3\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m4\u001b[39m]])\n\u001b[32m     16\u001b[39m s = np.array([[\u001b[32m2\u001b[39m],[\u001b[32m2\u001b[39m],[\u001b[32m2\u001b[39m]])\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m t = \u001b[43mr\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43ms\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(t)\n",
+      "\u001b[31mValueError\u001b[39m: operands could not be broadcast together with shapes (2,3) (3,1) "
+     ]
+    }
+   ],
+   "source": [
+    "#broadcasting\n",
+    "r = np.array([1,2,3])\n",
+    "s = np.array([4,5,6])\n",
+    "t = r + s\n",
+    "p = r * s\n",
+    "print(t)\n",
+    "print(p)\n",
+    "\n",
+    "#examples of positive broadcasting\n",
+    "r = np.array([1,2,3])\n",
+    "s = np.array([[2],[2],[2]])\n",
+    "t = r + s\n",
+    "print(t)\n",
+    "\n",
+    "#failure of broadcasting\n",
+    "r = np.array([[1,2,3],[3,2,4]])\n",
+    "s = np.array([[2],[2],[2]])\n",
+    "t = r + s\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa0d2fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
