learnt aggregate function and its use cases

--- a/NumPy/Numpy_concepts.ipynb
+++ b/NumPy/Numpy_concepts.ipynb
@@ -310,6 +310,42 @@
    "execution_count": null,
    "id": "9aa0d2fe",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "9\n",
+      "1\n",
+      "5.0\n",
+      "6.0\n",
+      "2.449489742783178\n"
+     ]
+    }
+   ],
+   "source": [
+    "#aggregation functions\n",
+    "k = np.array([[1,2,3,4,5],[5,6,7,8,9]])\n",
+    "print(k.sum())\n",
+    "print(k.max())\n",
+    "print(k.min())\n",
+    "print(k.mean())\n",
+    "print(k.var())\n",
+    "print(k.std())\n",
+    "\n",
+    "#setting axis\n",
+    "print(k.sum(axis=0)) #column\n",
+    "print(k.sum(axis=1)) #row\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fad3dd8",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
