--- a/NumPy/Numpy_concepts.ipynb
+++ b/NumPy/Numpy_concepts.ipynb
@@ -343,11 +343,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "1fad3dd8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23 45 67 89 12 34 56 78 90]\n",
+      "\n",
+      "[12]\n",
+      "[23 45 67 89 34 56 78 90]\n",
+      "[[10 20 30 40 50]\n",
+      " [ 6  7  8  9 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Filtering\n",
+    "ages = np.array([23, 45, 67, 89, 12, 34, 56, 78, 90])\n",
+    "print(ages)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "teenager = ages[ages<18]\n",
+    "adult = ages[ages>=18]\n",
+    "print(teenager)\n",
+    "print(adult)\n",
+    "\n",
+    "#preserving original shape of array\n",
+    "b = np.array([[1,2,3,4,5],[6,7,8,9,10]])\n",
+    "v = np.where(b>5,b,b*10)\n",
+    "print(v)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
