learnt random number generator

--- a/NumPy/Numpy_concepts.ipynb
+++ b/NumPy/Numpy_concepts.ipynb
@@ -378,6 +378,59 @@
     "print(v)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "579c3da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 1 8]\n",
+      " [8 2 8]\n",
+      " [3 5 7]]\n",
+      "\n",
+      "[[1 7 6]\n",
+      " [4 4 8]\n",
+      " [1 7 2]]\n",
+      "\n",
+      "[[3.6979469  4.60998764 7.92272275]\n",
+      " [3.38547163 6.82106594 3.18377262]\n",
+      " [5.98961174 5.18095547 1.34077622]]\n",
+      "[ 4  8  6  3  7  1  9 10  5  2]\n",
+      "[['banana' 'orange' 'cherry']\n",
+      " ['banana' 'apple' 'apple']\n",
+      " ['banana' 'watermelon' 'apple']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#random number generator\n",
+    "rng = np.random.default_rng()\n",
+    "print(rng.integers(1,10, size=(3,3)))\n",
+    "print()\n",
+    "\n",
+    "#with seed\n",
+    "rng = np.random.default_rng(42)\n",
+    "print(rng.integers(1,10, size=(3,3)))\n",
+    "print()\n",
+    "\n",
+    "#uniform\n",
+    "print(np.random.uniform(1,10, size=(3,3)))\n",
+    "\n",
+    "#shuffle\n",
+    "rng = np.random.default_rng()\n",
+    "u = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "rng.shuffle(u)\n",
+    "print(u)\n",
+    "\n",
+    "fruits = np.array([\"apple\", \"banana\", \"cherry\",\"pineapple\",\"orange\",\"musk melon\",\"watermelon\"])\n",
+    "fruit = rng.choice(fruits , (3,3))\n",
+    "print(fruit)\n"
+   ]
   }
  ],
  "metadata": {
