--- a/Pandas/Pandas_concepts.ipynb
+++ b/Pandas/Pandas_concepts.ipynb
@@ -124,6 +124,156 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8bf0fd17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     #                   Name  Type 1  Type 2  Total   HP  Attack  Defense  \\\n",
+      "0    1              Bulbasaur   Grass  Poison    318   45      49       49   \n",
+      "1    2                Ivysaur   Grass  Poison    405   60      62       63   \n",
+      "2    3               Venusaur   Grass  Poison    525   80      82       83   \n",
+      "3    3  VenusaurMega Venusaur   Grass  Poison    625   80     100      123   \n",
+      "4    4             Charmander    Fire     NaN    309   39      52       43   \n",
+      "..  ..                    ...     ...     ...    ...  ...     ...      ...   \n",
+      "94  87                Dewgong   Water     Ice    475   90      70       80   \n",
+      "95  88                 Grimer  Poison     NaN    325   80      80       50   \n",
+      "96  89                    Muk  Poison     NaN    500  105     105       75   \n",
+      "97  90               Shellder   Water     NaN    305   30      65      100   \n",
+      "98  91               Cloyster   Water     Ice    525   50      95      180   \n",
+      "\n",
+      "    Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+      "0        65       65     45           1      False  \n",
+      "1        80       80     60           1      False  \n",
+      "2       100      100     80           1      False  \n",
+      "3       122      120     80           1      False  \n",
+      "4        60       50     65           1      False  \n",
+      "..      ...      ...    ...         ...        ...  \n",
+      "94       70       95     70           1      False  \n",
+      "95       40       50     25           1      False  \n",
+      "96       65      100     50           1      False  \n",
+      "97       45       25     40           1      False  \n",
+      "98       85       45     70           1      False  \n",
+      "\n",
+      "[99 rows x 13 columns]\n",
+      "\n",
+      "     #                       Name    Type 1    Type 2  Total   HP  Attack  Defense  Sp. Atk  Sp. Def  Speed  Generation  Legendary\n",
+      "0    1                  Bulbasaur     Grass    Poison    318   45      49       49       65       65     45           1      False\n",
+      "1    2                    Ivysaur     Grass    Poison    405   60      62       63       80       80     60           1      False\n",
+      "2    3                   Venusaur     Grass    Poison    525   80      82       83      100      100     80           1      False\n",
+      "3    3      VenusaurMega Venusaur     Grass    Poison    625   80     100      123      122      120     80           1      False\n",
+      "4    4                 Charmander      Fire       NaN    309   39      52       43       60       50     65           1      False\n",
+      "5    5                 Charmeleon      Fire       NaN    405   58      64       58       80       65     80           1      False\n",
+      "6    6                  Charizard      Fire    Flying    534   78      84       78      109       85    100           1      False\n",
+      "7    6  CharizardMega Charizard X      Fire    Dragon    634   78     130      111      130       85    100           1      False\n",
+      "8    6  CharizardMega Charizard Y      Fire    Flying    634   78     104       78      159      115    100           1      False\n",
+      "9    7                   Squirtle     Water       NaN    314   44      48       65       50       64     43           1      False\n",
+      "10   8                  Wartortle     Water       NaN    405   59      63       80       65       80     58           1      False\n",
+      "11   9                  Blastoise     Water       NaN    530   79      83      100       85      105     78           1      False\n",
+      "12   9    BlastoiseMega Blastoise     Water       NaN    630   79     103      120      135      115     78           1      False\n",
+      "13  10                   Caterpie       Bug       NaN    195   45      30       35       20       20     45           1      False\n",
+      "14  11                    Metapod       Bug       NaN    205   50      20       55       25       25     30           1      False\n",
+      "15  12                 Butterfree       Bug    Flying    395   60      45       50       90       80     70           1      False\n",
+      "16  13                     Weedle       Bug    Poison    195   40      35       30       20       20     50           1      False\n",
+      "17  14                     Kakuna       Bug    Poison    205   45      25       50       25       25     35           1      False\n",
+      "18  15                   Beedrill       Bug    Poison    395   65      90       40       45       80     75           1      False\n",
+      "19  15      BeedrillMega Beedrill       Bug    Poison    495   65     150       40       15       80    145           1      False\n",
+      "20  16                     Pidgey    Normal    Flying    251   40      45       40       35       35     56           1      False\n",
+      "21  17                  Pidgeotto    Normal    Flying    349   63      60       55       50       50     71           1      False\n",
+      "22  18                    Pidgeot    Normal    Flying    479   83      80       75       70       70    101           1      False\n",
+      "23  18        PidgeotMega Pidgeot    Normal    Flying    579   83      80       80      135       80    121           1      False\n",
+      "24  19                    Rattata    Normal       NaN    253   30      56       35       25       35     72           1      False\n",
+      "25  20                   Raticate    Normal       NaN    413   55      81       60       50       70     97           1      False\n",
+      "26  21                    Spearow    Normal    Flying    262   40      60       30       31       31     70           1      False\n",
+      "27  22                     Fearow    Normal    Flying    442   65      90       65       61       61    100           1      False\n",
+      "28  23                      Ekans    Poison       NaN    288   35      60       44       40       54     55           1      False\n",
+      "29  24                      Arbok    Poison       NaN    438   60      85       69       65       79     80           1      False\n",
+      "30  25                    Pikachu  Electric       NaN    320   35      55       40       50       50     90           1      False\n",
+      "31  26                     Raichu  Electric       NaN    485   60      90       55       90       80    110           1      False\n",
+      "32  27                  Sandshrew    Ground       NaN    300   50      75       85       20       30     40           1      False\n",
+      "33  28                  Sandslash    Ground       NaN    450   75     100      110       45       55     65           1      False\n",
+      "34  29                   Nidoran♀    Poison       NaN    275   55      47       52       40       40     41           1      False\n",
+      "35  30                   Nidorina    Poison       NaN    365   70      62       67       55       55     56           1      False\n",
+      "36  31                  Nidoqueen    Poison    Ground    505   90      92       87       75       85     76           1      False\n",
+      "37  32                   Nidoran♂    Poison       NaN    273   46      57       40       40       40     50           1      False\n",
+      "38  33                   Nidorino    Poison       NaN    365   61      72       57       55       55     65           1      False\n",
+      "39  34                   Nidoking    Poison    Ground    505   81     102       77       85       75     85           1      False\n",
+      "40  35                   Clefairy     Fairy       NaN    323   70      45       48       60       65     35           1      False\n",
+      "41  36                   Clefable     Fairy       NaN    483   95      70       73       95       90     60           1      False\n",
+      "42  37                     Vulpix      Fire       NaN    299   38      41       40       50       65     65           1      False\n",
+      "43  38                  Ninetales      Fire       NaN    505   73      76       75       81      100    100           1      False\n",
+      "44  39                 Jigglypuff    Normal     Fairy    270  115      45       20       45       25     20           1      False\n",
+      "45  40                 Wigglytuff    Normal     Fairy    435  140      70       45       85       50     45           1      False\n",
+      "46  41                      Zubat    Poison    Flying    245   40      45       35       30       40     55           1      False\n",
+      "47  42                     Golbat    Poison    Flying    455   75      80       70       65       75     90           1      False\n",
+      "48  43                     Oddish     Grass    Poison    320   45      50       55       75       65     30           1      False\n",
+      "49  44                      Gloom     Grass    Poison    395   60      65       70       85       75     40           1      False\n",
+      "50  45                  Vileplume     Grass    Poison    490   75      80       85      110       90     50           1      False\n",
+      "51  46                      Paras       Bug     Grass    285   35      70       55       45       55     25           1      False\n",
+      "52  47                   Parasect       Bug     Grass    405   60      95       80       60       80     30           1      False\n",
+      "53  48                    Venonat       Bug    Poison    305   60      55       50       40       55     45           1      False\n",
+      "54  49                   Venomoth       Bug    Poison    450   70      65       60       90       75     90           1      False\n",
+      "55  50                    Diglett    Ground       NaN    265   10      55       25       35       45     95           1      False\n",
+      "56  51                    Dugtrio    Ground       NaN    405   35      80       50       50       70    120           1      False\n",
+      "57  52                     Meowth    Normal       NaN    290   40      45       35       40       40     90           1      False\n",
+      "58  53                    Persian    Normal       NaN    440   65      70       60       65       65    115           1      False\n",
+      "59  54                    Psyduck     Water       NaN    320   50      52       48       65       50     55           1      False\n",
+      "60  55                    Golduck     Water       NaN    500   80      82       78       95       80     85           1      False\n",
+      "61  56                     Mankey  Fighting       NaN    305   40      80       35       35       45     70           1      False\n",
+      "62  57                   Primeape  Fighting       NaN    455   65     105       60       60       70     95           1      False\n",
+      "63  58                  Growlithe      Fire       NaN    350   55      70       45       70       50     60           1      False\n",
+      "64  59                   Arcanine      Fire       NaN    555   90     110       80      100       80     95           1      False\n",
+      "65  60                    Poliwag     Water       NaN    300   40      50       40       40       40     90           1      False\n",
+      "66  61                  Poliwhirl     Water       NaN    385   65      65       65       50       50     90           1      False\n",
+      "67  62                  Poliwrath     Water  Fighting    510   90      95       95       70       90     70           1      False\n",
+      "68  63                       Abra   Psychic       NaN    310   25      20       15      105       55     90           1      False\n",
+      "69  64                    Kadabra   Psychic       NaN    400   40      35       30      120       70    105           1      False\n",
+      "70  65                   Alakazam   Psychic       NaN    500   55      50       45      135       95    120           1      False\n",
+      "71  65      AlakazamMega Alakazam   Psychic       NaN    590   55      50       65      175       95    150           1      False\n",
+      "72  66                     Machop  Fighting       NaN    305   70      80       50       35       35     35           1      False\n",
+      "73  67                    Machoke  Fighting       NaN    405   80     100       70       50       60     45           1      False\n",
+      "74  68                    Machamp  Fighting       NaN    505   90     130       80       65       85     55           1      False\n",
+      "75  69                 Bellsprout     Grass    Poison    300   50      75       35       70       30     40           1      False\n",
+      "76  70                 Weepinbell     Grass    Poison    390   65      90       50       85       45     55           1      False\n",
+      "77  71                 Victreebel     Grass    Poison    490   80     105       65      100       70     70           1      False\n",
+      "78  72                  Tentacool     Water    Poison    335   40      40       35       50      100     70           1      False\n",
+      "79  73                 Tentacruel     Water    Poison    515   80      70       65       80      120    100           1      False\n",
+      "80  74                    Geodude      Rock    Ground    300   40      80      100       30       30     20           1      False\n",
+      "81  75                   Graveler      Rock    Ground    390   55      95      115       45       45     35           1      False\n",
+      "82  76                      Golem      Rock    Ground    495   80     120      130       55       65     45           1      False\n",
+      "83  77                     Ponyta      Fire       NaN    410   50      85       55       65       65     90           1      False\n",
+      "84  78                   Rapidash      Fire       NaN    500   65     100       70       80       80    105           1      False\n",
+      "85  79                   Slowpoke     Water   Psychic    315   90      65       65       40       40     15           1      False\n",
+      "86  80                    Slowbro     Water   Psychic    490   95      75      110      100       80     30           1      False\n",
+      "87  80        SlowbroMega Slowbro     Water   Psychic    590   95      75      180      130       80     30           1      False\n",
+      "88  81                  Magnemite  Electric     Steel    325   25      35       70       95       55     45           1      False\n",
+      "89  82                   Magneton  Electric     Steel    465   50      60       95      120       70     70           1      False\n",
+      "90  83                 Farfetch'd    Normal    Flying    352   52      65       55       58       62     60           1      False\n",
+      "91  84                      Doduo    Normal    Flying    310   35      85       45       35       35     75           1      False\n",
+      "92  85                     Dodrio    Normal    Flying    460   60     110       70       60       60    100           1      False\n",
+      "93  86                       Seel     Water       NaN    325   65      45       55       45       70     45           1      False\n",
+      "94  87                    Dewgong     Water       Ice    475   90      70       80       70       95     70           1      False\n",
+      "95  88                     Grimer    Poison       NaN    325   80      80       50       40       50     25           1      False\n",
+      "96  89                        Muk    Poison       NaN    500  105     105       75       65      100     50           1      False\n",
+      "97  90                   Shellder     Water       NaN    305   30      65      100       45       25     40           1      False\n",
+      "98  91                   Cloyster     Water       Ice    525   50      95      180       85       45     70           1      False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#importing\n",
+    "o = pd.read_csv(\"D:\\Studies\\Projects\\Python\\AI-ML-DL\\data\\pokemon.csv\")\n",
+    "print(o)\n",
+    "print()\n",
+    "\n",
+    "print(o.to_string()) #to print full dataset\n"
+   ]
   }
  ],
  "metadata": {
