learnt sorting methods in pandas

--- a/Pandas/Pandas_concepts.ipynb
+++ b/Pandas/Pandas_concepts.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7710150e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dcf60555",
    "metadata": {},
    "outputs": [
@@ -86,10 +86,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "    name  age       Job\n",
       "1   John   28   Teacher\n",
       "2   Anna   22    Doctor\n",
       "3  James   35  Engineer\n",
+      "\n",
       "    name  age       Job\n",
       "1   John   28   Teacher\n",
       "2   Anna   22    Doctor\n",
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "8bf0fd17",
    "metadata": {},
    "outputs": [
@@ -273,6 +275,81 @@
     "print()\n",
     "\n",
     "print(o.to_string()) #to print full dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5099b922",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                 Bulbasaur\n",
+      "1                   Ivysaur\n",
+      "2                  Venusaur\n",
+      "3     VenusaurMega Venusaur\n",
+      "4                Charmander\n",
+      "              ...          \n",
+      "94                  Dewgong\n",
+      "95                   Grimer\n",
+      "96                      Muk\n",
+      "97                 Shellder\n",
+      "98                 Cloyster\n",
+      "Name: Name, Length: 99, dtype: object\n",
+      "\n",
+      "                     Name  Total\n",
+      "0               Bulbasaur    318\n",
+      "1                 Ivysaur    405\n",
+      "2                Venusaur    525\n",
+      "3   VenusaurMega Venusaur    625\n",
+      "4              Charmander    309\n",
+      "..                    ...    ...\n",
+      "94                Dewgong    475\n",
+      "95                 Grimer    325\n",
+      "96                    Muk    500\n",
+      "97               Shellder    305\n",
+      "98               Cloyster    525\n",
+      "\n",
+      "[99 rows x 2 columns]\n",
+      "#                   2\n",
+      "Name          Ivysaur\n",
+      "Type 1          Grass\n",
+      "Type 2         Poison\n",
+      "Total             405\n",
+      "HP                 60\n",
+      "Attack             62\n",
+      "Defense            63\n",
+      "Sp. Atk            80\n",
+      "Sp. Def            80\n",
+      "Speed              60\n",
+      "Generation          1\n",
+      "Legendary       False\n",
+      "Name: 1, dtype: object\n",
+      "\n",
+      "1    Ivysaur\n",
+      "Name: Name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#selection\n",
+    "#selection by column\n",
+    "print(o[\"Name\"])  #use to_string() to print the entire column\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(o[[\"Name\",\"Total\"]])\n",
+    "\n",
+    "#selection by row\n",
+    "print(o.loc[1])\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(o.loc[[1],\"Name\"])\n",
+    "\n"
    ]
   }
  ],
