--- a/Pandas/Pandas_concepts.ipynb
+++ b/Pandas/Pandas_concepts.ipynb
@@ -349,6 +349,42 @@
     "print()\n",
     "\n",
     "print(o.loc[[1],\"Name\"])\n",
+    "\n",
+    "\n",
+    "#practise\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    \"Name\": [\"Asha\", \"Rahul\", \"Meena\", \"Karthik\"],\n",
+    "    \"Age\": [21, 23, 20, 22],\n",
+    "    \"Marks\": [85, 90, 78, 92]\n",
+    "}, index=[\"s1\", \"s2\", \"s3\", \"s4\"])\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "df.loc[\"s2\"]  #selecting row\n",
+    "\n",
+    "df.loc[[\"s1\", \"s3\"]] #selecting multiple rows\n",
+    "\n",
+    "df.loc[[\"s1\", \"s4\"], [\"Name\", \"Age\"]] #selecting multiple rows and columns\n",
+    "\n",
+    "df.loc[\"s1\":\"s3\"] #selecting rows in a range\n",
+    "\n",
+    "df.loc[\"s3\", \"Marks\"] = 80 #updating \n",
+    "\n",
+    "df.iloc[1]      # second row\n",
+    "\n",
+    "df.iloc[[0, 2]]\n",
+    "\n",
+    "df.iloc[1, 2]   # row 1, column 2 (Marks)\n",
+    "\n",
+    "df.iloc[0:2]    # rows 0 and 1\n",
+    "\n",
+    "df.iloc[[0, 3], [1, 2]]\n",
+    "\n",
+    "df.iloc[2, 2] = 79\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
