learnt sorting techniques

--- a/Pandas/Pandas_concepts.ipynb
+++ b/Pandas/Pandas_concepts.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7710150e",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5099b922",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,12 @@
       "Name: 1, dtype: object\n",
       "\n",
       "1    Ivysaur\n",
-      "Name: Name, dtype: object\n"
+      "Name: Name, dtype: object\n",
+      "       Name  Age  Marks\n",
+      "s1     Asha   21     85\n",
+      "s2    Rahul   23     90\n",
+      "s3    Meena   20     78\n",
+      "s4  Karthik   22     92\n"
      ]
     }
    ],
@@ -383,6 +388,41 @@
     "df.iloc[[0, 3], [1, 2]]\n",
     "\n",
     "df.iloc[2, 2] = 79\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85688195",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age\n",
+      "0   John   28\n",
+      "2  James   35\n",
+      "   name  age\n",
+      "0  John   28\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Filtering Techniques\n",
+    "d = {\"name\":[\"John\",\"Anna\",\"James\"],\"age\":[28,22,35]}  \n",
+    "data = pd.DataFrame(d)\n",
+    "c = data[data[\"age\"]>25]\n",
+    "k = data[data[\"name\"] == \"John\"]\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(k)\n",
     "\n",
     "\n",
     "\n"
